#35 issue only difficulty image is not diplayed or only above text and not behind...

--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -1,9 +1,18 @@
-body {
+
+body, html {
   padding-top: 40px;
   padding-bottom: 40px;
-  background-color: #eee;
-}
+  height: 100%;
 
+}
+#content >div:first-of-type {
+  width: 100%;
+  height: 400px;
+  background-image: url('login2.jpg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  border: 1px solid red;
+}
 .form-signin {
   max-width: 330px;
   padding: 15px;
@@ -22,7 +31,7 @@ body {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-  padding: 10px;
+  padding: 20px;
   font-size: 16px;
 }
 .form-signin .form-control:focus {
@@ -38,3 +47,17 @@ body {
   border-top-left-radius: 0;
   border-top-right-radius: 0;
 }
+.button {
+  background-color: red;
+  border: none;
+  color: white;
+  padding: 20px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+}
+
+
+
